assets/css/style.css
/* ... */
.section-team-area .sliders-pointers {
    display: flex;
    gap: 10px;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
    height: 20px;
}

.section-team-area .pointer {
    width: 15px;
    height: 15px;
    cursor: pointer;
    border: 2px solid #b28756;
    border-radius: 8px;
    transition: 90ms ease-in;
}

.section-team-area .pointer:hover {
    background-color: #b28756;
}

.section-team-area .pointer.active {
    background-color: #b28756;
}

.section-team--avatar {
    width: 150px;
    height: auto;
}

.section-team--name {
    text-transform: uppercase;
    font-weight: 600;
    font-size: 17px;
    margin-top: 25px;
}

.section-team--role {
    font-size: 13px;
    color: #999;
    
}

.section-team--social {
    display: flex;
    margin-top: 20px;
}

.section-team--social a {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    margin-right: 10px;
    width: 25px;
    height: 25px;
    background-color: #ccc;
    border-radius: 13px;
    transition: 90ms ease-in;
}

.section-team--social:last-child {
    margin-right: -10px;
}

.section-team--social a:hover {
    background-color: #b28756;
}

.section-team--social a:not(:hover) {
    transition: 0.2s ease-in;
}

.section-clients {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.section-clients--avatar {
    margin-top: 20px;
}

.section-clients--name {
    font-size: 21px;
    font-weight: bold;
    line-height: 30px;
    margin-top: 15px;
}

.section-clients--role {
    font-size: 16px;
    font-weight: 600;
}

.section-clients--quote {
    margin-top: 40px;
}

.section-clients--quote img {
    width: 26px;
}

.section-clients--desc {
    margin-top: 10px;
    max-width: 760px;
    line-height: 25px;
    color: #999;
    font-weight: 600;
    text-align: center;
}

.section-clients .sliders-pointers {
    display: flex;
    gap: 10px;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
    height: 20px;
}

.section-clients .pointer {
    width: 15px;
    height: 15px;
    cursor: pointer;
    border: 2px solid #b28756;
    border-radius: 8px;
    transition: 90ms ease-in;
}

.section-clients .pointer:hover {
    background-color: #b28756;
}

.section-clients .pointer.active {
    background-color: #b28756;
}

.section-companies .section-companies--logos {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    max-width: 1140px;
    gap: 75px;
    width: 100vw;
}

.section-companies--logo {
    max-width: 95px;
}

.section-companies--logos .section-companies--logo img {
    width: 95px;
}

.section-price-area {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 25px;
}

.section-price--plan {
    background-color: #fff;
    padding: 25px 75px;
    text-align: center;
}

.section-price--name,
.section-price--pricing,
.section-price--sub {
    text-transform: uppercase;
    min-width: 110px;
}

.section-price--name {
    font-size: 16px;
    font-weight: 600;
}

.section-price--pricing {
    font-size: 28px;
    font-weight: bold;
    margin-top: 15px;
}

.section-price--sub {
    line-height: 20px;
    letter-spacing: 1px;
    color: #777;
}

.section-price--desc .price-desc-item {
    flex: 1;
    margin-top: 10px;
    font-size: 12px;
}

.section-price--plan .button {
    font-size: 12px;
    padding: 18px 40px;
}

.pointer:not(:hover) {
    transition:90ms ease-in;
}

.section-premium--area {
    display: flex;
    border-bottom: 2px solid #ccc;
}

.section-premium--left img {
    margin: 0px 0px 40px 85px;
}

.section-premium--right {
    display: flex;
    flex-direction: column;
}

.section-premium--right .section-premium--item {
    flex: 1;
}

.section-premium--left,
.section-premium--right {
    flex: 1;
}

.section-premium--item {
    display: flex;
    margin-bottom: 15px;
    gap: 25px;
}

.section-premium--item-text h4 {
    text-transform: uppercase;
    font-size: 20px;
    font-weight: bold;
}

.section-premium--item-text p {
    font-size: 14px;
    color: #999;
    line-height: 25px;
}

p.section-premium--item-features {
    text-transform: uppercase;
}

.section-premium--button {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 15px;
}

.section-premium--button a {
    padding: 15px 40px;
}

.section-facts-area {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    text-align: center;
    gap: 10px;
}

.section-facts-area .section-fact {
    flex: 1;
    padding: 35px;
}

.section-fact .fact-number {
    font-size: 40px;
    font-weight: bold;
    color: #b28756;
}

.section-fact .fact-underline {
    max-width: 18px;
    margin: auto;
    margin-top: 10px;
    border-bottom: 3px solid #777;
    text-align: center;
}

.section-fact h5 {
    min-height: 50px;
    margin-top: 5px;
    font-size: 18px;
    text-transform: uppercase;
}

.section-fact .fact-desc {
    color: #ccc;
    line-height: 20px;
}

.default.light.border {
    border-bottom: 3px solid #ccc;
    padding: 0;
    height: 90px;
}

.default.light.border.center {
    display: flex;
    align-items: center;
}

.section-sharing-area {
    display: flex;
    flex-direction: row;
    gap: 10px;
    justify-content: space-evenly;
    align-items: center;
}

.section-sharing--icon-area {
    display: flex;
    align-items: center;
}

.section-sharing--share {
    cursor: pointer;
}

.section-sharing--share-icon {
    display: flex;
    justify-content: center;
    align-items: center;
}

.section-sharing--share-icon img {
    width: 25px;
}

.section-sharing--text {
    margin-left: 15px;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 16px;
    color: #bbb;
}

.section-sharing--social-media {
    display: flex;
    gap: 75px;
}
/* ... */

